# igo

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
src/igo/: igo.py
src/igo.egg-info/: PKG-INFO  SOURCES.txt
